[package]
name = "srs_opaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = { version = "0.7.0", features = ["serde"] }
rand = "0.8.5"
ff = "0.13.0"
sha2 = "0.10"
argon2 = "0.5.1"
hkdf = "0.12.3"
hmac = "0.12.1"
curve25519-dalek = "4.0.0"
elliptic-curve = { version = "0.13.5", features = ["hash2curve"] }
generic-array = "0.14.7"
typenum = "1.16.0"
digest = "0.10.7"
zeroize = "1.6.0"
